[gd_scene load_steps=52 format=3 uid="uid://dy1vuuibqhx2l"]

[ext_resource type="Script" path="res://characters/player/script/player_knight.gd" id="1_640oc"]
[ext_resource type="Texture2D" uid="uid://ccp0im4tk10bq" path="res://characters/player/object_resources/Knight_1/Attack 1.png" id="1_qviks"]
[ext_resource type="Texture2D" uid="uid://ch1nym6xhvsj5" path="res://characters/player/object_resources/Knight_1/Dead.png" id="2_ybksi"]
[ext_resource type="Texture2D" uid="uid://b4wneavtyjxhf" path="res://characters/player/object_resources/Knight_1/Hurt.png" id="3_cf6j3"]
[ext_resource type="Texture2D" uid="uid://c8yo1otmceuva" path="res://characters/player/object_resources/Knight_1/Idle.png" id="4_fg5ut"]
[ext_resource type="Texture2D" uid="uid://bbxivarxet47a" path="res://characters/player/object_resources/Knight_1/Jump.png" id="5_snmrf"]
[ext_resource type="Texture2D" uid="uid://yf8v6ddg74a1" path="res://characters/player/object_resources/Knight_1/Protect.png" id="6_hyp2j"]
[ext_resource type="Texture2D" uid="uid://c5mr17iudu57i" path="res://characters/player/object_resources/Knight_1/Run.png" id="7_g4kt1"]
[ext_resource type="Texture2D" uid="uid://bjlhtov7m6bwa" path="res://characters/player/object_resources/Knight_1/Run+Attack.png" id="8_rqwys"]
[ext_resource type="PackedScene" uid="uid://dxlfqhpqjsa8u" path="res://environment/object_resources/counters/scenes/contador_moneda.tscn" id="10_4lqct"]
[ext_resource type="PackedScene" uid="uid://2e8qpv1lbpfg" path="res://environment/object_resources/counters/scenes/contador_runa.tscn" id="11_jn56i"]
[ext_resource type="AudioStream" uid="uid://yce5a4p6tsky" path="res://characters/ene_dyn/minotaur/scenes/male-death-sound-128357.mp3" id="12_j60g4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rtepp"]
atlas = ExtResource("1_qviks")
region = Rect2(0, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqtou"]
atlas = ExtResource("1_qviks")
region = Rect2(86, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cngp"]
atlas = ExtResource("1_qviks")
region = Rect2(172, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xy2"]
atlas = ExtResource("1_qviks")
region = Rect2(255, 0, 85, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwoer"]
atlas = ExtResource("1_qviks")
region = Rect2(344, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmfck"]
atlas = ExtResource("2_ybksi")
region = Rect2(0, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_br801"]
atlas = ExtResource("2_ybksi")
region = Rect2(80, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgvs3"]
atlas = ExtResource("2_ybksi")
region = Rect2(160, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh22h"]
atlas = ExtResource("2_ybksi")
region = Rect2(240, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_8psj7"]
atlas = ExtResource("2_ybksi")
region = Rect2(320, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_28bxn"]
atlas = ExtResource("2_ybksi")
region = Rect2(400, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_f32fd"]
atlas = ExtResource("3_cf6j3")
region = Rect2(0, 0, 70, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2nnq"]
atlas = ExtResource("3_cf6j3")
region = Rect2(70, 0, 70, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc0nw"]
atlas = ExtResource("4_fg5ut")
region = Rect2(9, 0, 67, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_doevh"]
atlas = ExtResource("4_fg5ut")
region = Rect2(76, 0, 67, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo4e5"]
atlas = ExtResource("4_fg5ut")
region = Rect2(143, 0, 67, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_fet1s"]
atlas = ExtResource("4_fg5ut")
region = Rect2(210, 0, 67, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_61tb2"]
atlas = ExtResource("5_snmrf")
region = Rect2(0, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_2njhw"]
atlas = ExtResource("5_snmrf")
region = Rect2(80, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs5ge"]
atlas = ExtResource("5_snmrf")
region = Rect2(160, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7xnf"]
atlas = ExtResource("5_snmrf")
region = Rect2(243, 0, 81, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds1ig"]
atlas = ExtResource("5_snmrf")
region = Rect2(324, 0, 81, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_samvr"]
atlas = ExtResource("5_snmrf")
region = Rect2(400, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8mqn"]
atlas = ExtResource("6_hyp2j")
region = Rect2(0, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_8alcc"]
atlas = ExtResource("7_g4kt1")
region = Rect2(0, 0, 71, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh20a"]
atlas = ExtResource("7_g4kt1")
region = Rect2(71, 0, 71, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7qek"]
atlas = ExtResource("7_g4kt1")
region = Rect2(142, 0, 71, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pgcq"]
atlas = ExtResource("7_g4kt1")
region = Rect2(213, 0, 71, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_egbai"]
atlas = ExtResource("7_g4kt1")
region = Rect2(284, 0, 71, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvmqw"]
atlas = ExtResource("7_g4kt1")
region = Rect2(355, 0, 71, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewk0g"]
atlas = ExtResource("7_g4kt1")
region = Rect2(426, 0, 71, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0af2"]
atlas = ExtResource("8_rqwys")
region = Rect2(0, 0, 72, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpwsw"]
atlas = ExtResource("8_rqwys")
region = Rect2(72, 0, 72, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_du5ac"]
atlas = ExtResource("8_rqwys")
region = Rect2(144, 0, 72, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsunw"]
atlas = ExtResource("8_rqwys")
region = Rect2(216, 0, 72, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_df0qm"]
atlas = ExtResource("8_rqwys")
region = Rect2(288, 0, 72, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_8avj4"]
atlas = ExtResource("8_rqwys")
region = Rect2(370, 0, 74, 86)

[sub_resource type="SpriteFrames" id="SpriteFrames_87fik"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtepp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqtou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cngp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwoer")
}],
"loop": true,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmfck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br801")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgvs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh22h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8psj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28bxn")
}],
"loop": false,
"name": &"dead",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f32fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2nnq")
}],
"loop": true,
"name": &"hurt",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc0nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doevh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo4e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fet1s")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61tb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2njhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs5ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7xnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds1ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_samvr")
}],
"loop": false,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8mqn")
}],
"loop": true,
"name": &"protect",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8alcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh20a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7qek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pgcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egbai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvmqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewk0g")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0af2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpwsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du5ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsunw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df0qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8avj4")
}],
"loop": true,
"name": &"run+attack",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2kwfc"]
size = Vector2(49, 66)

[node name="player_knight" type="CharacterBody2D"]
script = ExtResource("1_640oc")
metadata/_edit_group_ = true

[node name="ani_player" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_87fik")
animation = &"dead"

[node name="col_player" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 10)
shape = SubResource("RectangleShape2D_2kwfc")

[node name="cam_player" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 2
limit_top = 0
limit_right = 2383
limit_bottom = 1583
limit_smoothed = true
drag_vertical_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="contador_moneda" parent="CanvasLayer" instance=ExtResource("10_4lqct")]
offset_left = 39.0
offset_top = 2.0
offset_right = 37.0
offset_bottom = 2.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="contador_runa" parent="CanvasLayer2" instance=ExtResource("11_jn56i")]
offset_left = 81.0
offset_top = 2.0
offset_right = 81.0
offset_bottom = 2.0

[node name="time" type="Timer" parent="."]
one_shot = true

[node name="audio_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_j60g4")
